[gd_scene load_steps=15 format=3 uid="uid://dd70viq7ixof6"]

[ext_resource type="Script" path="res://Scenes/Game/game.gd" id="1_8ljh1"]
[ext_resource type="Shader" uid="uid://djp1uj0gk42kv" path="res://Scenes/Game/water.tres" id="2_066rc"]
[ext_resource type="Texture2D" uid="uid://nj84p7n2s2bx" path="res://Scenes/Game/score_board.png" id="2_gsu4w"]
[ext_resource type="Script" path="res://Scenes/Game/score_board.gd" id="2_jdy6b"]
[ext_resource type="Theme" uid="uid://cl5dwigu7j6fe" path="res://Themes/default_theme.tres" id="5_do7y5"]
[ext_resource type="PackedScene" uid="uid://cy5gjt7j67vox" path="res://Scenes/Game/Compass/compass.tscn" id="7_mytti"]
[ext_resource type="Script" path="res://Scenes/Game/CurrentManager.gd" id="9_r2nq2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibmqc"]
shader = ExtResource("2_066rc")
shader_parameter/CurrentDirection = Vector2(-100, 100)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7llos"]
width = 2527
height = 1412

[sub_resource type="LabelSettings" id="LabelSettings_bhg0a"]
font_size = 60
font_color = Color(0.3, 0.03, 0.0525001, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_ag7vc"]
font_size = 60
font_color = Color(0.301961, 0.156863, 0.0313726, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_ax156"]
font_size = 60
font_color = Color(0.03, 0.12, 0.3, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_eyhvf"]
font_size = 60
font_color = Color(0.03, 0.3, 0.0435, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_0yh8e"]
font_size = 58
font_color = Color(0.301961, 0.0980392, 0.0313726, 1)
outline_size = 12

[node name="Game" type="Node2D"]
script = ExtResource("1_8ljh1")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.929634, 0.982801)
zoom = Vector2(0.5, 0.5)

[node name="Water" type="Sprite2D" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_ibmqc")
scale = Vector2(0.929634, 0.982801)
texture = SubResource("NoiseTexture2D_7llos")

[node name="Timer" type="Timer" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ScoreBoard" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jdy6b")

[node name="Board" type="TextureRect" parent="UILayer/ScoreBoard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -490.0
offset_right = 490.0
offset_bottom = 75.0
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("2_gsu4w")

[node name="Player0" type="Label" parent="UILayer/ScoreBoard"]
layout_mode = 0
offset_left = 97.0
offset_top = -3.0
offset_right = 217.0
offset_bottom = 79.0
theme = ExtResource("5_do7y5")
text = "50"
label_settings = SubResource("LabelSettings_bhg0a")
horizontal_alignment = 1

[node name="Player1" type="Label" parent="UILayer/ScoreBoard"]
layout_mode = 0
offset_left = 215.0
offset_top = -3.0
offset_right = 335.0
offset_bottom = 79.0
theme = ExtResource("5_do7y5")
text = "50"
label_settings = SubResource("LabelSettings_ag7vc")
horizontal_alignment = 1

[node name="Player2" type="Label" parent="UILayer/ScoreBoard"]
layout_mode = 0
offset_left = 819.0
offset_top = -2.0
offset_right = 939.0
offset_bottom = 80.0
theme = ExtResource("5_do7y5")
text = "50"
label_settings = SubResource("LabelSettings_ax156")
horizontal_alignment = 1

[node name="Player3" type="Label" parent="UILayer/ScoreBoard"]
layout_mode = 0
offset_left = 933.0
offset_top = -3.0
offset_right = 1053.0
offset_bottom = 79.0
theme = ExtResource("5_do7y5")
text = "50"
label_settings = SubResource("LabelSettings_eyhvf")
horizontal_alignment = 1

[node name="Clock" type="Label" parent="UILayer/ScoreBoard"]
layout_mode = 0
offset_left = 421.0
offset_top = -3.0
offset_right = 525.0
offset_bottom = 72.0
theme = ExtResource("5_do7y5")
text = "3:00"
label_settings = SubResource("LabelSettings_0yh8e")
horizontal_alignment = 1

[node name="Compass" parent="UILayer/ScoreBoard" instance=ExtResource("7_mytti")]
visible = true
position = Vector2(765.145, 34.825)
scale = Vector2(0.24, 0.24)

[node name="CurrentManager" type="Node2D" parent="." node_paths=PackedStringArray("water_node", "compass_node")]
script = ExtResource("9_r2nq2")
water_node = NodePath("../Water")
compass_node = NodePath("../UILayer/ScoreBoard/Compass")

[node name="CannonBallParent" type="Node" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
